--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "webpack --config config/webpack.prod.conf.js",
     "start": "nohup npm run dev  > .nohup 2>&1 &",
     "stop": "netstat -aon | grep -E '9080.*LISTENING' | awk '{print $5}' | xargs tskill",
+    "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "config": {
@@ -29,6 +30,7 @@
     "@babel/preset-react": "^7.0.0",
     "antd": "^3.12.4",
     "autoprefixer": "^9.4.6",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-antd": "^0.5.1",
     "babel-plugin-dynamic-import-webpack": "^1.1.0",
@@ -36,6 +38,14 @@
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-html-reporter": "^0.5.2",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-react": "^7.12.4",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
@@ -54,6 +64,7 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "save-dev": "^2.0.0"
   }
 }
