--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config config/webpack.prod.conf.js",
     "start": "nohup npm run dev  > .nohup 2>&1 &",
     "stop": "netstat -aon | grep -E '9080.*LISTENING' | awk '{print $5}' | xargs tskill",
-    "lint": "eslint src",
+    "restart": "npm run stop && npm run start",
+    "eslint": "eslint ./src --fix -c=./config/.eslintrc.json --ignore-path=./config/.eslintignore",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "config": {
@@ -62,6 +63,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
