--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
+    "error-overlay-webpack-plugin": "^0.1.6",
     "eslint": "^5.12.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-html-reporter": "^0.5.2",
