--- a/package.json
+++ b/package.json
@@ -64,10 +64,13 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "classnames": "^2.2.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
     "save-dev": "^2.0.0"
   }
 }
