--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "title": "管理平台",
     "ROUTE_PATH": "/client/page",
     "icon": "assets/images/header-icon.png",
-    "port": 8000
+    "port": 9000
   },
   "antdTheme": {
     "primary-color": "#4986F2"
@@ -71,6 +71,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "save-dev": "^2.0.0"
   }
 }
