--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "save-dev": "^2.0.0"
+    "save-dev": "^2.0.0",
+    "highlight.js": "^9.13.1",
+    "marked": "^0.5.2"
   }
 }
