--- a/package.json
+++ b/package.json
@@ -66,14 +66,15 @@
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "classnames": "^2.2.6",
+    "highlight.js": "^9.13.1",
+    "marked": "^0.5.2",
+    "moment": "^2.24.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "save-dev": "^2.0.0",
-    "highlight.js": "^9.13.1",
-    "marked": "^0.5.2"
+    "save-dev": "^2.0.0"
   }
 }
