--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-html": "^5.0.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-react": "^7.12.4",
+    "file-loader": "^4.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "immutability-helper": "^3.0.1",
