--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "save-dev": "^2.0.0"
+    "save-dev": "^2.0.0",
+    "viewerjs": "^1.3.6"
   }
 }
