开源项目更新日志--添加、查询接口联调

--- a/.babelrc
+++ b/.babelrc
@@ -18,6 +18,9 @@
     ["import", { "libraryName": "antd", "style": "css" }],
     "dynamic-import-webpack",
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
-    ["@babel/plugin-proposal-class-properties", { "loose": true }]
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
+    [
+    "@babel/plugin-transform-runtime",
+  ]
   ]
 }
