--- a/.eslintignore
+++ b/.eslintignore
@@ -1,7 +1,9 @@
 # /node_modules/* and /bower_components/* ignored by default
 */node_modules/* 
+*/server/node_modules/* 
 # Ignore built files except build/index.js
 */dist/*
+*/server/dist/*
 */static/*
 **/public/*
 **/src/assets
